Added name in h5 tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h2>Git Class2</h2>
 <h3>Git Class3</h3>
 <h4>Git Class4</h4>
-<h5>Git Class5</h5>
+<h5>Git Class5 by shankar</h5>
 </body>
 </html>
