--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <h2>Git Class2</h2>
 <h3>Git Class3</h3>
 <h4>Git Class4</h4>
-<<<<<<< HEAD
 <h5>Git Class5 by shankar</h5>
 <h6>I am gowri sankar</h6>>
+<h7>This is last session</h7>
 </body>
 </html>
