removed junk in line h6

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h3>Git Class3</h3>
 <h4>Git Class4</h4>
 <h5>Git Class5 by shankar</h5>
-<h6>I am gowri sankar</h6>>
+<h6>I am gowri sankar</h6>
 <h7>This is last session</h7>
 </body>
 </html>
